webdisplayservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdisplay
  namespace: default
spec:
  clusterIP: None
  ports:
  - port: 3001
    targetPort: 3001
    name: webdisplay
  selector:
    k8s-app: webdisplay
